# mehurcki

./: .gitignore  README.md  detector_params.h  detector_params.h.small  pyproject.toml  report.tex  sample.txt
esp/: detector.h  detector_params.h  esp.h  esp.ino  mqtt_secrets.h  wifi_secrets.h
models/: svm_stft_20260103_190405.model  svm_stft_20260103_194351.model
server/: main.py  pyproject.toml
src/: detect.py  export_svm.py  load.py  main.py  plot.py  sample.py  transform.py
src/detectors/: constant.py  logistic.py  random.py  random_forest.py  svm.py
src/preprocessors/: continuous_wavelet.py  identity.py  stft.py  wavelet.py
